--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -2,6 +2,11 @@
 
 <h2>Created By {{userdetails.name}}</h2>
 
+{% for image in attributes.computed.images %}
+        <img src="{{image}}" />
+{% endfor %}
+
+
 <ul>
 <label>Tasks</label>
 {% for task in tasks %}
