-- Auto Commit - Changes made through Frontend Interface

--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -21,6 +21,6 @@
         {% for image in task.attributes.computed.images %}
                 <img src="{{image}}" />
         {% endfor %}
-        <p>{{ task.name }}</p>
+        <p>{{ task.description }}</p>
 {% endfor %}
 
