--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -19,7 +19,7 @@
 {% for task in tasks %}
         <h3>{{ task.name }}</h3>
         {% for image in task.computed.images %}
-                <img src="{{image}}" />
+                <img src="{{image}}" style="max-height:200px; max-width:200px;" />
         {% endfor %}
         <p>{{ task.description }}</p>
 {% endfor %}
