--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -8,7 +8,7 @@
 
 
 <ul>
-<label>Tasks overview</label>
+<h3>Tasks overview</h3>
 {% for task in tasks %}
         <li>{{ task.name }} {% if task.complete %}<span style="color:green;">complete</span>{% else %}<span style="color:red;">incomplete</span>{% endif %}</li>
 {% endfor %}
