--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -1,5 +1,6 @@
-<h1>{{attributes.company}} | {{attributes.title}}</h1>
 
+<h1>{{attributes.company}} | {{attributes.title}}</h1>
+<h3>{{attributes.type}}</h3>
 <h2>Created By {{userdetails.name}}</h2>
 
 {% for image in computed.images %}
