--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -1,7 +1,7 @@
 
 <h1>{{attributes.company}} | {{attributes.title}}</h1>
 <h3>{{attributes.type}}</h3>
-<h2>Created By {{userdetails.name}}</h2>
+<h2>Created By <a href="mailto:{{userdetails.email}}">{{userdetails.name}} | {{userdetails.email}}</a></h2>
 
 {% for image in computed.images %}
         <img src="{{image}}" />
