--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -2,7 +2,8 @@
 <h1>{{attributes.company}} | {{attributes.title}}</h1>
 <h3>{{attributes.type}}</h3>
 <h4>Created By <a href="mailto:{{userdetails.email}}">{{userdetails.name}} | {{userdetails.email}}</a></h4>
-
+<h4>Created {{createdDate| date}}. Last Updated {{modifiedDate| date}}</h4>
+<span>timezone info: </span>
 {% for image in computed.images %}
         <img src="{{image}}" />
 {% endfor %}
