--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -12,7 +12,7 @@
 <ul>
 <h3>Summary</h3>
 {% for task in tasks %}
-        <li>{{ task.name }} {% if task.complete %}<span style="color:green;">complete</span>{% else %}<span style="color:red;">incomplete</span>{% endif %}</li>
+        <li>{{ task.name }} {% if task.complete %}<span style="color:green;">Completed on {{task.completedDate | date}}</span>{% else %}<span style="color:red;">Incomplete</span>{% endif %}</li>
 {% endfor %}
     
 </ul>
@@ -20,6 +20,7 @@
 
 {% for task in tasks %}
         <h3>{{ task.name }}</h3>
+        <h4>Created {{task.createdDate| date}}. Last Updated {{task.modifiedDate| date}}. {% if task.complete %}<span style="color:green;">Completed on {{task.completedDate | date}}</span>{% endif %}</h4>
         {% for image in task.computed.images %}
                 <img src="{{image}}" style="max-height:200px; max-width:200px; margin:10px;" />
         {% endfor %}
