-- Auto Commit - Changes made through Frontend Interface

--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -10,7 +10,7 @@
 <h2>Team</h2>
 {% for member in attributes.teamMembers %}
         <img src="{{member.icon}}" max-height:100px; max-width:100px; margin:10px; />
-        <label>{{member.name}}<\label>
+        <label>{{member.name}}</label>
 {% endfor %}
 <h2>Tasks</h2>
 <ul>
