--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -10,7 +10,7 @@
 <h2>Team</h2>
 <div>
 {% for member in attributes.teamMembers %}
-        <div style="float:left; background-color:rgba(0,0,0,0.2); padding:10px;" ><div style="float:left; background-color:white;"><img src="{{member.icon}}"  style="max-height:100px; max-width:100px; margin:10px;" />
+        <div style="float:left; background-color:rgba(0,0,0,0.2); padding:10px; width:200px;" ><div style="float:left; background-color:white;"><img src="{{member.icon}}"  style="max-height:100px; max-width:100px; margin:10px;" />
         <label>{{member.name}}</label></div></div>
 {% endfor %}
 </div>
