--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -10,14 +10,16 @@
 <h2>Team</h2>
 <div>
 {% for member in attributes.teamMembers %}
-        <div style="float:left; background-color:rgba(0,0,0,0.2); padding:10px; width:100px;" >
+        <div style="float:left; background-color:rgba(0,0,0,0.2); border-radius:3px; width:100px;" >
             <div style="display:inline-block; background-color:white;">
-                <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; margin:10px;" />
+                <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; border-radius:3px; margin:5px;" />
                 <label>{{member.name}}</label>
             </div>
         </div>
 {% endfor %}
 </div>
+<div></div>
+
 <h2>Tasks</h2>
 <ul>
 <h3>Summary</h3>
@@ -26,6 +28,7 @@
 {% endfor %}
     
 </ul>
+
 
 
 {% for task in tasks %}
