--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -10,9 +10,9 @@
 <h2>Team</h2>
 <div>
 {% for member in attributes.teamMembers %}
-        <div style="display:inline-block; background-color:rgba(0,0,0,0.2); border-radius:3px; width:100px; padding:1px;" >
+        <div style="display:inline-block; background-color:rgba(0,0,0,0.2); border-radius:3px; padding:1px;" >
             <div style="display:inline-block; background-color:white;">
-                <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; border-radius:3px; margin:5px;" />
+                <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; width:100px; border-radius:3px; margin:5px;" />
                 <label>{{member.name}}</label>
             </div>
         </div>
