-- Auto Commit - Changes made through Frontend Interface

--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -13,7 +13,7 @@
         <div style="display:inline-block; background-color:rgba(0,0,0,0.2); border-radius:3px; padding:1px;" >
             <div style="display:inline-block; background-color:white;">
                 <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; width:100px; border-radius:3px; margin:5px;" />
-                <label>{{member.name}}</label>
+                <div><label">{{member.name}}</label></div>
             </div>
         </div>
 {% endfor %}
