--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -12,7 +12,7 @@
 {% for member in attributes.teamMembers %}
         <div style="display:inline-block; background-color:rgba(0,0,0,0.2); border-radius:3px; padding:1px;" >
             <div style="display:inline-block; background-color:white;">
-                <img src="{{member.icon}}"  style="max-height:100px; max-width:100px; width:100px; border-radius:3px; margin:5px;" />
+                <img src="{{member.icon}}"  style="height:100px;  border-radius:3px; margin:5px;" />
                 <div><label">{{member.name}}</label></div>
             </div>
         </div>
