-- Auto Commit - Changes made through Frontend Interface

--- a/app/proposal-report.contentTemplate.html
+++ b/app/proposal-report.contentTemplate.html
@@ -9,6 +9,7 @@
 {% endfor %}
 <h2>Team</h2>
 <div>
+<div></div>
 {% for member in attributes.teamMembers %}
         <div style="display:inline-block; background-color:rgba(0,0,0,0.2); border-radius:3px; padding:1px;" >
             <div style="display:inline-block; background-color:white;">
