--- a/app/email-onTaskUpdate-content.contentTemplate.html
+++ b/app/email-onTaskUpdate-content.contentTemplate.html
@@ -1,10 +1,14 @@
-{{editor.name}} ({{editor.email}}) made changes to the task: {{task.name}}.
+<h1>{{editor.name}} ({{editor.email}}) made changes to the task: {{task.name}}.</h1>
+
 <br/>
 What exactly was changed
-
-Link to item
-
+<br/>
+You can view this item in the Refferal Management Dashboard <a href="{{task.link}}">Here</a>
+<br/>
 This messages has been sent to {{user.name}} ({{user.email}}) by the Refferal Management Tool for {{user.community}}
+<br/>
+
 
 You can unsubscribe from this project by changing your notification preferences in the Project Team Tab 
 for this project. Project Id: {{project.id}} Name: {{project.attributes.title}}
+<br/>
