nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/email-onTaskUpdate-content.contentTemplate.html
+++ b/app/email-onTaskUpdate-content.contentTemplate.html
@@ -2,7 +2,7 @@
 
 <br/>
 <p>
-{{info.description}}
+{{info.action}}
 </p> <br/> 
 <p>
 You can view this item in the Refferal Management Dashboard <a href="{{task.link}}">Here</a>
