nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/email-onTaskUpdate-subject.contentTemplate.html
+++ b/app/email-onTaskUpdate-subject.contentTemplate.html
@@ -1,1 +1,1 @@
-User Updated Task: {{task.name}} for Project: {{project.attributes.title}}
+User Updated Task: {{task.name}} for Proposal: {{project.attributes.title}}
