nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/email-onProjectUpdate-content.contentTemplate.html
+++ b/app/email-onProjectUpdate-content.contentTemplate.html
@@ -5,7 +5,7 @@
 {{info.action}}
 </p> <br/> 
 <p>
-You can view this item in the Refferal Management Dashboard <a href="{{poject.link}}">Here</a>
+You can view this item in the Refferal Management Dashboard <a href="{{project.link}}">Here</a>
 </p> <br/> 
 <p>
 This messages has been sent to {{user.name}} ({{user.email}}) by the Refferal Management Tool for {{user.community}}
