--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,16 +1,18 @@
 <div style="text-align:center;">
 <div style="
     text-align:left;display:inline-block;max-width: 500px;margin: 20px 50px;background: rgba(0,0,0,0.1);
-    padding: 20px;border-radius: 3px;box-shadow: 0 0 3px rgba(0,0,0,0.1);border: 2px solid white;">
+    border-radius: 3px;box-shadow: 0 0 3px rgba(0,0,0,0.1);border: 2px solid white;">
 
 
 
+<div style="padding: 20px; border-bottom:1px solid black;">
+
+</div>
 
 
-
-
+<div style="padding: 20px;">
 {{message|raw}}
-
+</div>
 
 <div>
 <div>
