administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,9 +1,11 @@
-<div style="text-align:center;">
+<div style="text-align:center; ">
 <div style="
-    text-align:left;display:inline-block;max-width: 500px;margin: 20px 50px;background: rgba(0,0,0,0.1);
-    border-radius: 3px;box-shadow: 0 0 3px rgba(0,0,0,0.1);border: 1px solid gray;">
+    text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: rgba(0,0,0,0.1);
+    box-shadow: 0 0 3px;">
 
+<div style="padding: 20px; border-bottom:1px solid gray;">
 
+</div>
 
 <div style="padding: 20px; border-bottom:1px solid gray;">
 
