--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,4 +1,4 @@
-<div style="text-align:center; ">
+<div style="text-align:center;overflow: hidden;padding-bottom: 80px;">
 <div style="
     text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: rgba(0,0,0,0.1);
     box-shadow: 0 0 3px;">
