administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,6 +1,6 @@
-<div style="text-align:center;overflow: hidden;padding-bottom: 80px;">
+<div style="text-align:center;overflow: hidden;padding-bottom: 80px;background: #f6f6f6;">
 <div style="
-    text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: rgba(0,0,0,0.1);
+    text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: white;
     box-shadow: 0 0 3px;">
 
 <div style="padding: 20px; border-bottom:1px solid gray;">
