--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -3,11 +3,11 @@
     text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: white;
     box-shadow: 0 0 3px;">
 
-<div style="padding: 20px; border-bottom:1px solid gray;">
+<div style="padding: 20px;">
 
 </div>
 
-<div style="padding: 20px; border-bottom:1px solid gray;">
+<div style="padding: 20px; height:50px;">
 
 </div>
 
