--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,13 +1,20 @@
-<div style="text-align:center;overflow: hidden;padding-bottom: 80px;background: #f6f6f6;">
+<div style="text-align:center;overflow: hidden;padding-bottom: 80px;background: #e5e5e5;">
 <div style="
-    text-align:left;display:inline-block;max-width: 500px;margin: 0 50px;background: white;
-    box-shadow: 0 0 3px;">
+    text-align:left;
+    display:inline-block;
+    max-width: 500px;
+    margin: 0 50px;
+    background: white;
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    border: 1px solid rgb(18, 125, 179);
+    border-top: none;
+    ">
 
-<div style="padding: 20px;">
+<div style="padding: 20px;background-color: #e8e9e8;">
 
 </div>
 
-<div style="padding: 20px; height:50px;">
+<div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
 
 </div>
 
