--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -11,7 +11,7 @@
     ">
 
 <div style="padding: 20px;background-color: #e8e9e8;">
-
+    <div style="background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);"></div>
 </div>
 
 <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
