administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,22 +1,29 @@
-<div style="text-align:center;overflow: hidden;padding-bottom: 80px;background: #e5e5e5;">
 <div style="
-    text-align:left;
-    display:inline-block;
-    max-width: 500px;
-    margin: 0 50px;
-    background: white;
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
-    border: 1px solid rgb(18, 125, 179);
-    border-top: none;
+    text-align:center;
+    overflow: hidden;
+    padding-bottom: 80px;
+    background: #e5e5e5;
     ">
+    <div style="
+        text-align:left;
+        display:inline-block;
+        max-width: 500px;
+        margin: 0 50px;
+        background: white;
+        box-shadow: 0 0 10px rgba(0,0,0,.3);
+        border: 1px solid rgb(18, 125, 179);
+        border-top: none;
+        ">
 
-<div style="padding: 20px;background-color: #e8e9e8;">
+        <div style="padding: 20px;
+            background-color: #e8e9e8;
+            ">
     
-</div>
+        </div>
 
-<div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
-    <div style="background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);"></div>
-</div>
+        <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
+            <div style="background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);"></div>
+        </div>
 
 
 <div style="padding: 20px;">
