administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -22,7 +22,12 @@
         </div>
 
         <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
-            <div style="background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);"></div>
+            <div style="
+            background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
+            width: 50px;
+            height: 50px;
+            background-size: 100% auto;
+            "></div>
         </div>
 
 
