administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -21,8 +21,8 @@
     
         </div>
 
-        <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179);">
-            <div style="float:left;" >
+        <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179); text-align: center;">
+            <div style="float:left; text-align: left;" >
                 <h4>Wabun Tribal Council</h4>
                 <div>313 Railway Street</div>
                 <div>Timmins, ON P4N 2P4</div>
@@ -38,7 +38,7 @@
             display: inline-block;
             "></div>
             
-            <div style="float:right;" >
+            <div style="float:right;  text-align: left;" >
                 <h4>Mattagami First Nation</h4>
                 <div>P.O. Box: 99</div>
                 <div>Gogama, ON P0M 1W0</div>
