administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -15,7 +15,7 @@
         border-top: none;
         ">
 
-        <div style="padding: 20px;
+        <div style="padding: 0 20px;
             background-color: #e8e9e8;
             ">
     
@@ -23,7 +23,7 @@
 
         <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179); text-align: center;">
             <div style="float:left; text-align: left; font-size: .7em;" >
-                <h4>Wabun Tribal Council</h4>
+                <h4 style="margin: 10px 0;">Wabun Tribal Council</h4>
                 <div>313 Railway Street</div>
                 <div>Timmins, ON P4N 2P4</div>
                 <div>705 - 268 - 9066</div>
@@ -39,7 +39,7 @@
             "></div>
             
             <div style="float:right;  text-align: left; font-size: .7em;" >
-                <h4>Mattagami First Nation</h4>
+                <h4 style="margin: 10px 0;">Mattagami First Nation</h4>
                 <div>P.O. Box: 99</div>
                 <div>Gogama, ON P0M 1W0</div>
                 <div>705 - 894 - 2072</div>
