--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -21,7 +21,7 @@
     
         </div>
 
-        <div style="padding: 20px;height:50px;background-color: rgb(18, 125, 179); text-align: center;">
+        <div style="padding: 0 20px; height:50px;background-color: rgb(18, 125, 179); text-align: center;">
             <div style="float:left; text-align: left; font-size: .7em;" >
                 <h4 style="margin: 10px 0;">Wabun Tribal Council</h4>
                 <div>313 Railway Street</div>
