administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -45,6 +45,7 @@
                 <div>705 - 894 - 2072</div>
                 <div>705 - 894 - 2887</div>
             </div>
+            <div></div>
         </div>
 
 
