--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -11,7 +11,7 @@
         margin: 0 50px;
         background: white;
         box-shadow: 0 0 10px rgba(0,0,0,.3);
-        border: 1px solid rgb(18, 125, 179);
+        border: 1px solid #2E303A;
         border-top: none;
         ">
 
