--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -58,6 +58,43 @@
 {{message|raw}}
 </div>
 
+
+
+<div style="
+        padding: 0 20px;
+        height: 120px;
+        background-color: #2E303A;
+        text-align: center;
+        color: white;">
+            <div style="float:left; text-align: left; font-size: .7em;" >
+                <h4 style="margin: 10px 0;">Wabun Tribal Council</h4>
+                <div>313 Railway Street</div>
+                <div>Timmins, ON P4N 2P4</div>
+                <div>705 - 268 - 9066</div>
+                <div>705 - 268 - 8554</div>
+                <div>www.wabun.on.ca</div>
+            </div>
+            <div style="
+            background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
+            width: 50px;
+            height: 50px;
+            background-size: 100% auto;
+            display: inline-block;
+            "></div>
+            
+            <div style="float:right;  text-align: left; font-size: .7em;" >
+                <h4 style="margin: 10px 0;">Mattagami First Nation</h4>
+                <div>P.O. Box: 99</div>
+                <div>Gogama, ON P0M 1W0</div>
+                <div>705 - 894 - 2072</div>
+                <div>705 - 894 - 2887</div>
+            </div>
+            <div></div>
+        </div>
+
+
+
+
 </div>
 
 </div>
