administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -27,7 +27,9 @@
     background-color: #2E303A;
     text-align: center;
     color: white;">
-            
+            <div style="float:left">
+                <h4>Wabut Tribal Council: Referral Management Tool</h4>
+            </div>
             <div style="
             background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
             width: 50px;
