--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -28,7 +28,7 @@
     text-align: center;
     color: white;">
             <div style="float:left">
-                <h4>Wabut Tribal Council: Referral Management Tool</h4>
+                <h4>Wabun Tribal Council: Referral Management Tool</h4>
             </div>
             <div style="
             background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
