--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -35,8 +35,8 @@
             display: inline-block;
             background-repeat:none;
             "></div>
-            <div style="display:inline-block;">
-                <h4>Wabun Tribal Council: Referral Management Tool</h4>
+            <div style="display:inline-block; vertical-align: top;">
+                <h4 >Wabun Tribal Council: Referral Management Tool</h4>
             </div>
            
             
