administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -36,7 +36,9 @@
             background-repeat:none;
             "></div>
             <div style="display:inline-block; vertical-align: top;">
-                <h4 >Wabun Tribal Council: Referral Management Tool</h4>
+                <h4 style="
+    margin: 15px;
+">Wabun Tribal Council: Referral Management Tool</h4>
             </div>
            
             
