administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -37,7 +37,9 @@
             display: inline-block;
             background-repeat:none;
             "></div>
-            <div style="display:inline-block; vertical-align: top;">
+            <div style="display: inline-block;
+    vertical-align: top;
+    font-size: 15px;">
                 <h4 style="
     margin: 15px;
 ">Wabun Tribal Council: Referral Management Tool</h4>
