--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -70,10 +70,12 @@
             </div>
             <div style="
                 background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
-                width: 50px;
-                height: 50px;
+                width: 80px;
+                height: 80px;
                 background-size: 100% auto;
                 display: inline-block;
+                margin-top: 20px;
+                background-repeat: no-repeat;
             "></div>
             
             <div style="float:right;  text-align: left; font-size: .7em;" >
