--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -1,10 +1,10 @@
-<link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <div style="
     text-align:center;
     overflow: hidden;
     padding-bottom: 80px;
     background: #e5e5e5;
-    font-family: 'Thasadith', sans-serif;
+   font-family: 'Roboto', sans-serif;
     ">
     <div style="
         text-align:left;
