administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -25,6 +25,7 @@
             padding: 10px 20px;
             height: 50px;
             background-color: #2E303A;
+            background-image: url(https://dyl2vw577xcfk.cloudfront.net/wabun.geoforms.ca/1/Uploads/Erj_3cv_%5BImAgE%5D_2kT_%5BG%5D.png);
             text-align: left;
             color: white;">
             <div style="
@@ -58,6 +59,7 @@
             padding: 0 20px;
             height: 120px;
             background-color: #2E303A;
+            background-image: url(https://dyl2vw577xcfk.cloudfront.net/wabun.geoforms.ca/1/Uploads/Erj_3cv_%5BImAgE%5D_2kT_%5BG%5D.png);
             text-align: center;
             color: white;">
             <div style="float:left; text-align: left; font-size: .7em;" >
