administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-DefaultMailerTemplate-subject.contentTemplate.html
+++ b/app/email-DefaultMailerTemplate-subject.contentTemplate.html
@@ -26,6 +26,7 @@
             height: 50px;
             background-color: #2E303A;
             background-image: url(https://dyl2vw577xcfk.cloudfront.net/wabun.geoforms.ca/1/Uploads/Erj_3cv_%5BImAgE%5D_2kT_%5BG%5D.png);
+            background-size: cover;
             text-align: left;
             color: white;">
             <div style="
@@ -72,6 +73,7 @@
             </div>
             <div style="
                 background-image: url(https://wabun.geoforms.ca/uploads-wabun.geoforms.ca/user_files_1/Uploads/[ImAgE]_3AT_[G]_1vT_kaK.png?thumb=>200x>200);
+                background-size: cover;
                 width: 80px;
                 height: 80px;
                 background-size: 100% auto;
