administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,1 +1,7 @@
-Woop Woop.. Just click to verify your email address: <a href="{{link}}" >Click Here</a>
+You registered an account with the Wabun Referral Management System at https://wabun.geoforms.ca !!<br/>
+Thats Great!! Thanks.<br/><br/>
+You just need to verify your email address by clicking the following link<br/>
+
+Click Here: <a href="{{link}}" >{{link}</a>
+
+<br/>
