administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -2,6 +2,6 @@ You registered an account with the Wabun Referral Management System at https://w
 Thats Great!! Thanks.<br/><br/>
 You just need to verify your email address by clicking the following link<br/>
 
-Click Here: <a href="{{link}}" >{{link}</a>
+Click Here: <a href="{{link}}" >{{link}}</a>
 
 <br/>
