administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/activate-proposal-email-body.contentTemplate.html
+++ b/app/activate-proposal-email-body.contentTemplate.html
@@ -1,1 +1,1 @@
-Its almost done, just click the link to continue: <a href="{{link}}" >Click Here</a>
+Your proposal is almost done, just click the link to continue: <a href="{{link}}" >Click Here</a>
