--- a/app/email-VerifyEmailLink-content.contentTemplate.html
+++ b/app/email-VerifyEmailLink-content.contentTemplate.html
@@ -1,4 +1,4 @@
-You registered an account with the Wabun Referral Management System at https://wabun.geoforms.ca !!<br/>
+You registered an account with Gather!!<br/>
 Thats Great!! Thanks.<br/><br/>
 You just need to verify your email address by clicking the following link<br/>
 
