--- a/app/email-MagicLoginLink-content.contentTemplate.html
+++ b/app/email-MagicLoginLink-content.contentTemplate.html
@@ -1,1 +1,1 @@
-To access the Refferal Management Tool please click on this link. <a href="{{link}}" >Click Here</a>
+To access the Referral Management Tool please <a href="{{link}}" >Click Here</a>
