administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/module-html-peopleUsersDetail-text.contentTemplate.html
+++ b/app/module-html-peopleUsersDetail-text.contentTemplate.html
@@ -1,8 +1,7 @@
-<div class="section-title">Your Team Members</div>
-<div class="section-help">
-<p><span class="section-title">How Teams Work</span><br/>Teams are created around a communities Lands Department. 
-    Lands Department managers can approve new Lands Department members,
-    (as well approving regular community users and mobile app users).
-    `Wabun` Lands department members are visible to all communities
-    <br/>You can collaborate on Projects and Tasks with people in your team. 
-    Lands Department managers can share projects accross communities</p></div>
+#Your Team Members
+##How Teams Work
+Teams are created around a communities Lands Department. 
+Lands Department managers can approve new Lands Department members,  (as well approving regular community users and mobile app users). `Wabun` Lands department members are visible to all communities
+    
+    
+You can collaborate on Projects and Tasks with people in your team.  Lands Department managers can share projects accross communities
