--- a/app/module-html-peopleUsersDetail-text.contentTemplate.html
+++ b/app/module-html-peopleUsersDetail-text.contentTemplate.html
@@ -2,7 +2,7 @@
 ##How Teams Work
 Teams are created around a communities Lands Department. 
 Lands Department managers can approve new Lands Department members,  (as well approving regular community users and mobile app users). 
-_Wabun_ Lands department members are visible to all communities
+{{collective}} Lands department members are visible to all communities
     
     
 You can collaborate on Projects and Tasks with people in your team.  Lands Department managers can share projects accross communities
