administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/module-html-peopleUsersDetail-text.contentTemplate.html
+++ b/app/module-html-peopleUsersDetail-text.contentTemplate.html
@@ -6,3 +6,4 @@ Lands department members are visible to all communities
 
 You can collaborate on Projects and Tasks with people in your team.  
 Lands Department managers can share projects accross communities
+##Community users and roles
