administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/module-html-communityUsersDetail-text.contentTemplate.html
+++ b/app/module-html-communityUsersDetail-text.contentTemplate.html
@@ -3,3 +3,4 @@ When users log in for the first time they must be approved by a Lands Department
 This page shows all the community members as well as users who have not yet been assigned to any roll.   
 Lands department members can approve users as community members, while Lands department managers can also 
 add users to the lands department team
+##Pending users
