--- a/app/module-html-peopleUsersDetail-text.contentTemplate.html
+++ b/app/module-html-peopleUsersDetail-text.contentTemplate.html
@@ -1,4 +1,4 @@
-#Your Team Members
+#Your Team Members test
 ##How Teams Work
 Teams are created around a communities Lands Department.  
 Lands Department managers can approve new Lands Department members,  (as well approving regular community users and mobile app users).  
