--- a/app/module-html-communityUsersDetail-text.contentTemplate.html
+++ b/app/module-html-communityUsersDetail-text.contentTemplate.html
@@ -1,5 +1,6 @@
-#Manage Community Users And Add Team Members</div>
-<div class="section-help"><p>When users log in for the first time they must be approved by a Staff/Technician or Community Manager. 
-The following shows all the community members as well as users who have not yet been assigned to any roll. 
-Staff/Technicians can approve users as community members, while Community Managers can also 
-assign users as Staff/Technicians</p></div>
+#Manage Community Users And Add Team Members
+When users log in for the first time they must be approved by a Lands Department member.  
+This page shows all the community members as well as users who have not yet been assigned to any roll.   
+Lands department members can approve users as community members, while Lands department managers can also 
+add users to the lands department team
+##Pending user
